[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlnative"
version = "0.3.6"
description = "Simple Python wrapper for MapLibre GL Native using native Rust renderer"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Adon Metcalfe"}
]
keywords = ["maplibre", "maps", "rendering", "static-maps", "tiles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "shapely>=2.0",
    "geopy>=2.4",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pillow>=11.0",
]

[project.urls]
Homepage = "https://github.com/adonm/mlnative"
Repository = "https://github.com/adonm/mlnative"
Issues = "https://github.com/adonm/mlnative/issues"

[tool.hatch.build.targets.wheel]
packages = ["mlnative"]
# Include platform-specific binaries
artifacts = ["mlnative/bin/*"]

[tool.hatch.build.targets.sdist]
# Only include necessary files for building from source
include = [
    "/mlnative",
    "/rust/src",
    "/rust/Cargo.toml",
    "/rust/Cargo.lock",
    "/rust/README.md",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/rust/target",
    "/.github",
    "/tests",
    "/examples",
    "/scripts",
    "/.mise.toml",
    "/Justfile",
    "/Dockerfile.test",
    "/AGENTS.md",
    "/test_rust_backend.py",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["mlnative"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that render actual PNGs (requires network and native binary)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true
